kubernetes/test-orchestrator/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cdpb-tester
  labels:
    app.kubernetes.io/name: cdpb-tester
    app.kubernetes.io/instance: cdpb-tester
