kubernetes/test-orchestrator/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-orchestrator
  namespace: cdpb-tester
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /cdpb-tester(/|$)(?!private)(.*) # exclude the private path from external networking
            pathType: Prefix
            backend:
              service:
                name: test-orchestrator
                port:
                  number: 8000
